# hidbridge

./: .gitignore  LICENSE  README.md  ble.go  config.example.json  config.go  evdev.go  go.mod  go.sum  keymap.go  main.go  mqtt.go  net.go  ota.go  report.go  serial.go  sink.go
firmware/esp32s3_hid_idf/: .env.example  CMakeLists.txt  README.md  idf.sh  partitions.csv  sdkconfig.defaults
firmware/esp32s3_hid_idf/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
